change coverage script block

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
     - run:
         name: Run coverage
         command: |
-          $HOME/.local/bin/coverage run -m pytest
-          $HOME/.local/bin/coverage report
-          $HOME/.local/bin/coverage html
+          coverage run -m pytest
+          coverage report
+          coverage html
     - store_artifacts:
         path: htmlcov
 workflows:
