pytest report changed to junit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,9 @@ jobs:
         name: run tests
         command: |
           mkdir test-results
-          pytest --verbose --cov-report html:~/test-results/coverage_html --cov=. --junitxml=~/test-results/junit.xml
+          ytest --verbose --cov-report html:test-results/coverage_html --cov=cli --junitxml=test-results/junit.xml ./cli_test.py
     - store_test_results:
-        path: test-results
+        path: test-results/junit.xml
     - store_artifacts:
         path: test-results
 #    - run:
